# Vektor

./: .gitignore  README.md  bench.py  build.prof  debug_test.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
benchmarks/: common.py  exp1_2_recall_qps_vs_ef.py  exp3_4_build_and_memory.py  exp5_recall_vs_m.py  exp6_distance_speedup.py  run_all.py
benchmarks/results/: exp6_distance_speedup.csv  hardware_spec.md
docs/: API_reference.md  Architecture.md  api_design.md  benchmarks.md  collection.json
scripts/: download_datasets.py
src/vektor/: __init__.py  cli.py  client.py  collection.py  collection_api.py  distance.py  models.py  storage.py  validator.py
src/vektor/api/: app.py  dependencies.py  exceptions.py  models.py  utils.py
src/vektor/benchmark/: bench_phase2_distance.py  datasets.py  distance_bench.py  latency.py  memory.py  recall.py  results.py  runner.py
src/vektor/concurrency/: exceptions.py  lock.py
src/vektor/filtering/: parser.py  postfilter.py  prefilter.py  (+1 more)
tests/: manual.py  test_api.py  test_api_integration.py  test_phase0_sanity.py  test_phase10_concurrency.py  test_phase11_models.py  test_phase12_models.py  test_phase12_utils.py  test_phase13_reproducibility.py  test_phase1_distance.py  test_phase1_validator.py  test_phase3_collection.py  test_phase4_storage.py  test_phase5_persistence.py  test_phase6_benchmark.py  test_phase7_hnsw.py  test_phase9_filtering.py
vektor_data/debug/: collection.json  metadata.db
vektor_data/debugg/: collection.json  metadata.db
vektor_data/debuggg/: collection.json  metadata.db
(+16 files in other folders)
