[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vektor"
version = "0.1.0"
description = "A production-style vector database built from scratch."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[
    tool.setuptools.packages.find
]
where = ["src"]