[project]
name = "vektor"
version = "0.2.0"
description = "A production-style vector database built from scratch."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "h5py>=3.9",
    "fastapi[standard]>=0.115",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx",
]

[project.scripts]
vektor = "vektor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]